fix overflow

--- a/src/index.scss
+++ b/src/index.scss
@@ -19,6 +19,10 @@ $font-family-sans-serif: 'Poppins';
 
 @import "node_modules/bootstrap/scss/bootstrap";
 
+body {
+  overflow-x: hidden;
+}
+
 .navbar {
   background-color: $charcoal;
   color: $queen-pink;
